# repo-convergence

./: CMakeLists.txt  LICENSE  README.md  build_all.py
common/: CMakeLists.txt
common/cmake/: compilation.apple.cmake  compilation.cmake  compilation.linux.cmake  compilation.windows.cmake  definitions.cmake  definitions.windows.cmake  folders.cmake  setup.cmake  third-party-libs.cmake
common/conan/: conanfile.txt
common/conan/profiles/: apple-base.ini  apple-debug.ini  apple-release.ini  linux-base.ini  linux-debug.ini  linux-release.ini  win32-debug.ini  win32-release.ini  win64-debug.ini  win64-release.ini  windows-base.ini
common/lib/: CMakeLists.txt  weather.c  weather.h
common/lib/ut/: CMakeLists.txt  weather_test.cc
linux/: CMakeLists.txt  main.cpp
windows/: CMakeLists.txt
